--- a/Projects/Project Number 1/style.css
+++ b/Projects/Project Number 1/style.css
@@ -15,7 +15,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url("Images/Path\ 15@2x.png");
+    background-image: url("Images/Path15.png");
     background-size: 100vw;
     background-repeat: no-repeat;
 }
