--- a/Projects/Project Number 1/style.css
+++ b/Projects/Project Number 1/style.css
@@ -12,10 +12,7 @@ body {
     width: 100vw;
     height: 100vh;
     display: inline-block;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: url("images/Path15.png");
+    background-image: url("Images/Path15.png");
     background-size: 100vw;
     background-repeat: no-repeat;
 }
@@ -85,16 +82,17 @@ body {
 
 .input {
     width: 100%;
-    height: 30px;
+    height: 40px;
     padding: 0 10px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1.5px solid #D31C75;
+    border:none;
     font: normal 1rem Heebo;
     transition: all 0.2s;
 }
 
 .input:hover {
     background: #e2e2e2;
+    border: 1.5px solid #D31C75;
 }
 
 .button {
